<resources>
    <string name="app_name">WNS Chat</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="username">Username</string>
    <string name="server_ip_address">Server IP Address</string>
    <string name="server_port">Server Port</string>
    <string name="connect">Connect</string>
    <string name="server_ip_address_sample">0.0.0.0</string>
    <string name="server_port_sample">9001</string>
</resources>
