<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daltonbaird.wnschat.activities.LoginActivity"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_headline_material"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:ems="10"
        android:id="@+id/editTextUsername"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_ip_address"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_headline_material"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:text="@string/server_ip_address_sample"
        android:id="@+id/editTextServerIP"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_port"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_headline_material"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/server_port_sample"
        android:ems="10"
        android:id="@+id/editTextServerPort"
        android:layout_gravity="center_horizontal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/buttonConnect"
        android:layout_gravity="bottom|center_horizontal"
        android:textSize="@dimen/abc_text_size_menu_material"
        android:height="@dimen/abc_action_bar_default_height_material"
        android:onClick="login"/>
</LinearLayout>
